--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-roblox-ts": "0.0.24",
     "prettier": "^2.2.1",
+    "rbxts-transformer-services": "^1.0.0",
     "typescript": "^4.1.5"
+  },
+  "dependencies": {
+    "@rbxts/services": "^1.1.2"
   }
 }
