--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
 	"types": "out/index.d.ts",
 	"devDependencies": {
 		"@rbxts/compiler-types": "^1.0.0-types.0",
-		"@rbxts/types": "^1.0.453",
+		"@rbxts/services": "^1.1.4",
+		"@rbxts/thread": "^1.0.0",
+		"@rbxts/types": "^1.0.461",
 		"@typescript-eslint/eslint-plugin": "^4.15.1",
 		"@typescript-eslint/parser": "^4.15.1",
 		"eslint": "^7.20.0",
@@ -27,8 +29,5 @@
 		"prettier": "^2.2.1",
 		"rbxts-transformer-services": "^1.0.0",
 		"typescript": "^4.1.5"
-	},
-	"dependencies": {
-		"@rbxts/services": "^1.1.2"
 	}
 }
