--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,7 +25,7 @@
         "arrowParens": "always",
         "bracketSpacing": true,
         "embeddedLanguageFormatting": "auto",
-        "endOfLine": "lf",
+        "endOfLine": "crlf",
         "htmlWhitespaceSensitivity": "css",
         "insertPragma": false,
         "jsxBracketSameLine": true,
